--- a/404.html
+++ b/404.html
@@ -9,17 +9,17 @@
 	<meta name="viewport" content="width = 320" />
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
-	<link rel="stylesheet" type="text/css" href="lostinclouds/styles/reset.css" />	
-	<link rel="stylesheet" type="text/css" href="lostinclouds/styles/main.css" />
+	<link rel="stylesheet" type="text/css" href="http://samimakela.fi/lostinclouds/styles/reset.css" />	
+	<link rel="stylesheet" type="text/css" href="http://samimakela.fi/lostinclouds/styles/main.css" />
 	<link href="http://fonts.googleapis.com/css?family=Inconsolata&amp;v1" rel="stylesheet" type="text/css" />
 	<link href='http://fonts.googleapis.com/css?family=Candal&amp;v1' rel='stylesheet' type='text/css' />
 	
 	<!-- IE6 fixes are found in styles/ie6.css -->
 	<!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="lostinclouds/styles/ie6.css" /><![endif]-->
 	
-	<script src="lostinclouds/scripts/jquery-1.6.2.js" type="text/javascript"></script>
-	<script src="lostinclouds/scripts/jquery-ui-1.7.2.spritely.custom.min.js" type="text/javascript"></script>
-	<script src="lostinclouds/scripts/jquery.spritely-0.5.js" type="text/javascript"></script>
+	<script src="http://samimakela.fi/lostinclouds/scripts/jquery-1.6.2.js" type="text/javascript"></script>
+	<script src="http://samimakela.fi/lostinclouds/scripts/jquery-ui-1.7.2.spritely.custom.min.js" type="text/javascript"></script>
+	<script src="http://samimakela.fi/lostinclouds/scripts/jquery.spritely-0.5.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
 
