--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	
 	<script>document.createElement('nav');document.createElement('section');</script>
-	<script src="js/jquery.1.4.4.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="js/cufon.js"></script>
 	<script src="js/font.js"></script>
 	<script src="js/jquery.nivo.slider.pack.js"></script>
@@ -24,7 +24,7 @@
 	<div id="wrap">
 	
 		<nav>
-			<a href="../" id="logo">Logo</a>
+			<div id="logo">Logo</div>
 			<ul id="nav">
 				<li><a href="#home">Home</a></li>
 				<li><a href="#about">About Me</a></li>
@@ -58,9 +58,15 @@
 				<img id="profilpic" src="img/sami.png" alt="" width="150" height="200">
 
 				<p>
-					<h3>I work as a senior software engineer in <strong>BCB Medical Ltd</strong>.</h3>
+					<h3>
+						I work as a senior software engineer in <strong>BCB Medical Ltd</strong>.
+					</h3>
 				</p>
-		
+				<p>
+					<h3>
+						My hobbies include DJing, poker, golf, gym and also participating open source software development.
+					</h3>
+				</p>
 				
 			</div><!-- end div #about -->
 					
