--- a/index.html
+++ b/index.html
@@ -58,16 +58,8 @@
 				<hr>
 				<img id="profilpic" src="img/sami.png" alt="" width="150" height="200">
 
-				<p>
-					<h3>
-						<strong>I work as a senior software engineer in BCB Medical Ltd.</strong>
-					</h3>
-				</p>
-				<p>
-					<h3>
-						<strong>My hobbies include DJing, poker, golf, gym and also participating open source software development.</strong>
-					</h3>
-				</p>
+				<h3><strong>I work as a senior software engineer in BCB Medical Ltd.</strong></h3>
+				<h3><strong>My hobbies include DJing, poker, golf, gym and also participating open source software development.</strong></h3>
 				
 			</div><!-- end div #about -->
 					
