--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	
-    <title>samimakela.fi</title>
+    	<title>samimakela.fi</title>
 	
 	<meta name="description" content="">
 	<meta name="author" content="revaxarts.com">
@@ -18,6 +18,16 @@
 	<script src="js/jquery.prettyphoto.js"></script>
 	<script src="js/config.js"></script>
 	<script src="js/script.js"></script>
+	<script type="text/javascript">
+  		var _gaq = _gaq || [];
+  		_gaq.push(['_setAccount', 'UA-28184613-1']);
+  		_gaq.push(['_trackPageview']);
+  		(function() {
+    			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  		})();
+	</script>
 </head>
 <body>
 
